<resources>
    <string name="app_name">OfferChecker</string>

    <string name="action_settings">Settings</string>

    <string name="activity_search_action_bar">Search for offers</string>
    <string name="activity_search_title_text">Check offer!</string>
    <string name="activity_search_user_id_edit_text_hint">User ID</string>
    <string name="activity_search_api_key_edit_text_hint">API Key</string>
    <string name="activity_search_application_id_edit_text_hint">Application ID</string>
    <string name="activity_search_custom_parameters_edit_text_hint">Custom parameters</string>
    <string name="activity_search_button_text">Get offers</string>
    <string name="activity_search_dummy_button_text">Dummy values</string>
    <string name="activity_search_clear_button_text">Clear fields</string>
    <string name="activity_search_bad_signature">Signature verification failed</string>
    <string name="activity_search_complete_fields_message">Please, complete the fields</string>
    <string name="activity_search_progress_dialog_title">Loading</string>
    <string name="activity_search_progress_dialog_body">Please wait…</string>
    <string name="activity_search_error">There has been an error in the search. Please, try again</string>
    <string name="activity_search_play_services_error">Error connecting to Google Play Services</string>

    <string name="activity_results_action_bar">Search results</string>
    <string name="activity_results_no_offers">No offers</string>

    <string name="activity_offer_detail_action_bar">Offer detail</string>
    <string name="activity_offer_detail_title_header_text">Title</string>
    <string name="activity_offer_detail_offer_id_header_text">Offer ID</string>
    <string name="activity_offer_detail_teaser_header_text">Offer Detail</string>
    <string name="activity_offer_detail_required_actions_header_text">Required Actions</string>
    <string name="activity_offer_detail_link_header_text">Link</string>
    <string name="activity_offer_detail_offer_types_button_text">Check offer types</string>
    <string name="activity_offer_detail_payout_header_text">Payout</string>
    <string name="activity_offer_detail_time_to_payout_header_text">Time to Payout</string>
    <string name="activity_offer_detail_time_to_payout_amount_header_text">Amount</string>
    <string name="activity_offer_detail_time_to_payout_readable_header_text">Readable</string>
    <string name="activity_offer_detail_thumbnail_header_text">Thumbnail</string>
    <string name="activity_offer_detail_store_id_header_text">Store ID</string>

    <string name="activity_display_image_action_bar">Thumbnail detail</string>
    <string name="activity_display_image_error">Error retrieving image</string>
    <string name="activity_offer_detail_offer_types_header_text">Offer Types</string>

    <string name="offer_types_dialog_title">Offer Types</string>
    <string name="offer_types_dialog_button">OK</string>
</resources>
