<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:focusableInTouchMode="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            style="@style/BigBlueFont"
            android:id="@+id/activity_search_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_search_title_text" />

        <EditText
            android:id="@+id/activity_search_user_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/activity_search_user_id_edit_text_hint" />

        <EditText
            android:id="@+id/activity_search_api_key_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/activity_search_api_key_edit_text_hint" />

        <EditText
            android:id="@+id/activity_search_application_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/activity_search_application_id_edit_text_hint" />

        <EditText
            android:id="@+id/activity_search_custom_parameters_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/activity_search_custom_parameters_edit_text_hint" />

        <Button
            android:id="@+id/activity_search_get_offers_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/orange_button_background"
            android:layout_marginTop="25dp"
            android:textColor="@color/white"
            android:text="@string/activity_search_button_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp"
            android:weightSum="1">

            <Button
                android:id="@+id/activity_search_dummy_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                android:text="@string/activity_search_dummy_button_text" />

            <Button
                android:id="@+id/activity_search_clear_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                android:text="@string/activity_search_clear_button_text" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>